# UndertaleDemoCode

./: .gitignore  README.md  UndertaleDemo.gmk
__gen/: Cargo.toml
__gen/src/: error.rs  main.rs  mangle.rs
__gen/src/mangle/: key.rs  mouse.rs  other.rs
objects/OBJ_INSTAWRITER/: create_0.gml  create_1.gml  draw_0.gml
objects/OBJ_NOMSCWRITER/: create_0.gml
objects/OBJ_WRITER/: alarm0_0.gml  create_0.gml  create_1.gml  draw_0.gml  other_user0_0.gml  step_0.gml  step_begin_0.gml
objects/OBJ_WRITERCREATOR/: create_0.gml
objects/blt_avoidfire/: create_0.gml  step_end_0.gml
objects/blt_blookhat/: collision_blt_crybullet2_0.gml  create_0.gml  step_0.gml
objects/blt_bluespear/: alarm0_0.gml  collision_obj_heart_0.gml  create_0.gml
objects/blt_butterfly1/: create_0.gml  step_0.gml
objects/blt_crybullet/: step_0.gml  (+1 more)
scripts/: Attention, Hackerz.gml  SCR_BORDER.gml  SCR_BORDERSETUP.gml  SCR_DIRECT.gml  SCR_GAMESTART.gml  SCR_LASER.gml  SCR_NEWLINE.gml  SCR_TEXT.gml  SCR_TEXTSETUP.gml  SCR_TEXTTYPE.gml  SCR_THATCH.gml  draw_self_border.gml  keyboard_multicheck.gml  keyboard_multicheck_pressed.gml  murdererlv1.gml  random_ranger.gml  scr_armoreq.gml  scr_attack.gml  scr_attackcalc.gml  scr_battlegroup.gml  scr_begin.gml  scr_binfowrite.gml  scr_blconmatch.gml  scr_cost.gml  scr_depth.gml  scr_edge.gml  scr_end.gml  scr_facechoice.gml  scr_gameoverb.gml  scr_getvapordata.gml  scr_interact.gml  scr_itemcheck.gml  scr_itemdesc.gml  scr_itemget.gml  scr_itemname.gml  scr_itemnameb.gml  scr_itemnamelist.gml  scr_itemnospace.gml  scr_itemrewrite.gml  scr_itemshift.gml  (+31 more)
(+804 files in other folders)
