[package]
name = "gm8decomp"
version = "0.0.0"
authors = ["BioTomateDE <biotomatde@proton.me>"]
edition = "2024"
description = "Code unpacking tool for GameMaker 8 games"
readme = "../README.md"
repository = "https://github.com/BioTomateDE/UndertaleDemoCode"
license = "GPL-2.0-only"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
option_if_let_else = "allow"

[dependencies.gm8exe]
git = "https://github.com/OpenGMK/OpenGMK"
version = "0.2.0"
